<resources>
    <string name="app_name">TT2.0</string>
    <string name="action_settings">Settings</string>
    <string name="title1">Event name 1</string>
    <string name="desctt">This year Talent Tantra is going to rock your socks off! Are your ready to head back into your childhood world of comics and superheroes?</string>
    <string name="desctt2">This year Talent Tantra is going to rock your socks off! Are your ready to head back into your childhood world of comics and superheroes?\n At Talent Tantra 2018, we will bring to you your favourite comic characters, punched in with a whole lot of fun and a bout of nostalgia!\nJoin us on the 3-day extravaganza - a one-of-a-kind platform to showcase your talents - with fun, food, music, dance and a doze of healthy competition!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lagori_desc">Lagori makes music that reflects the face of the modern Indian youth. This Bangalore-based band combines Indian classical melodies and inflections with Rock music, resulting in an interesting mix that is high on energy, while being catchy and soulful at the same time.</string>
    <string name="sunburn_desc">Sunburn is amongst the world’s biggest music festivals. It is an eclectic mix of music, entertainment, experiences, celebration and lifestyle.</string>
    <string name="focusia_selfie_desc">Talent Tantra presents a one-of-a-kind online selfie competition for all you photo addicts! Click your selfie and send it to the WhatsApp number or email. Take a selfie and bring home an exciting prize!</string>
    <string name="focusia_selfie_rules">1.Submitted photos will be uploaded to official Facebook Page of Kaziranga University.\n\n
2.Highest numbers of Likes &amp; Shares in that photo will be declared as a winner.\n\n
3.1 Like = 1 Points and 1 Share = 2 Points.\n\n
4.Using Auto-Like or any other means of inappropriate bots will be disqualified.\n\n
5.Photos must be submitted on or before 15 December 2017.\n\n
6.Photos submitted should contain your Name and Institution name.\n\n
7.Winner will be declared on 6th January 2018.</string>
    <string name="focusia_selfie_photobooth">Grab a prop and strike a pose! Capture your memories with Talent Tantra’s special photo booth, which includes a wide array of props and frames! You can instantly print and take your home photos too!</string>
    <string name="focusia_movie_desc">An opportunity to create a short film at Talent Tantra 2018. Direct your friends to act and produce a film with your mobile camera</string>
    <string name="focusia_movie_rules">1.The participants will have to submit their videos by the evening of 6th January 2018.\n\n
2.A team can have a minimum of 3 members and maximum of 5 members.\n\n
3.The video must be recorded inside the KU campus.\n\n
4.Participants are allowed to use a mobile camera of 5MP or above for recording the movie.\n\n
5.No video recording or editing material will be provided by us for the competition.\n\n
6.The video must not exceed 8 minutes to 10 minutes with credits.\n\n
7.The winning entries will be chosen by a panel of judges and the result will be declared by the evening of the next day. The winning video may also be displayed at the closing ceremony of Talent Tantra.\n\n
8.Decision of the organizers will be final.</string>
    <string name="focusia_movie_note">It is suggested that participants should record the video with highest resolution and quality settings if possible</string>
    <string name="guide_general">1) Participation to any event at Talent Tantra is subject to the participants fulfilling the requisite procedures of participation, meeting the eligibility criteria and the sole and absolute discretion of the organisers of Talent Tantra. The organisers reserve the right to suspend or withdraw the participation of any participant at any time, including after the confirmation of registration.\n\n
2) All participants must carry valid photo IDs of their institution and age proof, and produce the same on demand.\n\n
3) All participants must comply withall rules and guidelines as are notified by the organizing committee and judges, including without limitation the specific rules and guidelines pertaining to a particular event organised as a part of Talent Tantra. The decision of the judges shall be final and no representation to the contrary shall be entertained and will be dismissed summarily.\n\n
4) The registration fees for each event will be accepted only at the registration desk and shall be non-refundable, except to the limited extent provided herein. Participation to an event is subject to the payment of all registration fees in full.\n\n
5) Accommodation may be provided to participants and/or competitors at the sole and absolute discretion of the organisers of Talent Tantra. All accommodation provided hereunder shall be subject to the rules and regulations provided herein and shall be chargeable in accordance with the rules and regulations provided below.\n\n
6) Buses up to Jorhat (Barua Chariali) will be provided at the end of the show on all three days. However, the organisers make no representation as to the availability of seating on such transportation and disclaim any and all claims that may arise as a result of the provision of such transportation, including without limitation any claims arising as a result of any accident and/or death of any persons.\n\n
7) Misconduct, distasteful and/or abusive behaviour and/or non-compliance with any applicable rules and reasonable requests of the organisers of Talent Tantra by any person shall not be tolerated and the organisers reserve the right to evict such persons from the University premises and terminate their participation, and/or strip them of any prizes at its sole.\n\n
8) The organisers reserve the right to suspend / withdraw / replace / cancel Talent Tantra 2018 and/or any event forming a part of Talent Tantra 2018 without any prior notice to any person, at its sole and absolute discretion. In the event of and only in the event of the cancellation of any event and/or Talent Tantra, shall the participants be liable for a refund of all registration fees paid in relation to the cancelled event. Such refund shall be processed within 60 to 90 days of the cancellation of the event.\n\n
9) Coordinators and Volunteers must carry their Talent Tantra IDs with them at all times.</string>
    <string name="guide_travel">Travel Reimbursement is available for participants who come in groups/teams (Min. 5 members) from a distance of greater than 150km from the Kaziranga University campus.\n\n

1)	Subject to the sole discretion of organisers of Talent Tantra, travel reimbursement may be provided to participants who participate in groups/teams of five (5)or more members (“Teams”) at events conducted with the Kaziranga University campus and travel for a distance of greater than one hundred and fifty kilometres (150km) from the Kaziranga University campus. Any and all reimbursements made shall be subject to such Teams producing valid invoices and receipts of all expenses incurred while travelling to the campus for participation in Talent Tantra.\n\n
2)	All reimbursements shall be made in accordance with the following schedule, subject always to a maximum reimbursement of Indian Rupees Five Hundred only (INR 500/-) per participant:\n\n
Team Size    Two way reimbursement per person\n\n
  20+	participants          Up to fifty percent (50%)\n\n
  10 to 19 participants      Up to thirty percent (30%)\n\n
  5 to 9 participants       Up to twenty percent (20%)\n\n
3) All reimbursements will be made with respect to the cheapest and shortest distance sleeper class train fare and/or bus fare between the point of origin of the Team and the University Campus, irrespective of the mode of transportation. For example, where a Team travels by air from Kolkata to Jorhat and by taxi from Jorhat airport to Kaziranga University, such Team, upon producing the valid receipts and tickets shall be eligible to receive such sums as reimbursement equal to the cheapest available train from Kolkata to Jorhat and applicable bus fare from Jorhat airport to the Kaziranga University campus. \n\n
4) Teams must register themselves online at www.talenttantra.com on or before 30thDecember 2017 in order to avail the reimbursements contemplated herein. Subject to the sole discretion of the organisers, no claims for reimbursements shall be entertained for any Team that fails to register themselves within the stipulated time provided above.\n\n
5) With specific respect to travel reimbursements, no modifications to the number of participants without prior written notice to the organising committee will be entertained. The organising committee reserves the right to disapprove any modification requests, even where such requests are duly made and received by the organising committee.\n\n
6) All participants are required to submit a copy of their valid ID cards, and their tickets (which should include date, departure location &amp; official signature/stamp of the transport service) in order to avail any reimbursement.\n\n
7) Travel reimbursement will be made at the time of departure on the last day of Talent Tantra, and any requests to preponesuch reimbursements shall be summarily dismissed.\n\n
8) Travel reimbursement will be done for the whole team together, as per the names on our database. We will not entertain any individual requests.\n\n

NOTE:\n\n
1) ONLY PARTICIPANTS ARE ELIGIBLE FOR TRAVEL REIMBURSEMENT.\n\n
2) MAXIMUM REIMBURSEMENT PER PERSON THAT WILL BE GIVEN IS RS. 500.\n\n
Example: If a 7 member team is travelling from Guwahati (one way fare = Rs. 300), each team member will be given 20% of the two way fare (i.e. 20% of Rs. 600 = Rs.120).
</string>
    <string name="guide_acco_rules">1) Accommodation will be made available on a first-come first-served basis and subject to availability. It will be charged at Rs. 100 per day.\n\n
2) A refundable security deposit of Rs. 100 will be charged per participant. This will be returned to the individual at their departure, only after the receipt has been shown and verified.\n\n
3) Only breakfast will be provided, on a chargeable basis. Bed, pillow, blanket will be provided by the organizers.\n\n
4) At the end of the concert each evening, participants must report to their respective accommodation areas within 30 minutes of the conclusion of the concert.\n\n
5) The provision of accommodation to participants is subject to their compliance with all rules and regulations enforced by the Kaziranga University for the respective and subject to the jurisdiction of the Hostel Warden and Deputy Warden and all other appropriate authority within Kaziranga University.\n\n
6) Alcohol and Smoking are strictly prohibited within the University campus. Strict action will be taken against any damage to institutional property.\n\n
7) Any instance of misbehavior will lead to disqualification of participants, and the Team from participating any and all events of Talent Tantra, and will lead to the immediate eviction of the participant from the hostel and University premises at the sole and absolute discretion of the organisers.</string>
    <string name="guide_acco">Subject to the following rules and regulations, accommodation for participants will be provided in the KU Girls and Boys Hostels, for all three days of the event (5th, 6th and 7th January 2018). Under special circumstances, accommodation may be provided on priority basis on the 4th of January 2018 as well.</string>
</resources>