<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/focusia_selfie">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundrect2"
        android:layout_margin="8dp"
        android:elevation="4dp">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/focusia_selfie_desc"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundrect"
        android:layout_marginTop="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/spons_draw"
            >
            <TextView
                android:id="@+id/view_focusia_selfie_rules"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rules and regulations"
                android:layout_centerInParent="true"

                android:textSize="30sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focusia_selfie_rules"
            android:textSize="15sp"
            android:padding="8dp"

            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/roundrect"
        android:layout_marginTop="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/spons_draw">
            <TextView
                android:id="@+id/view_focusia_selfie_coordinators"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="event coordinator"
                android:layout_centerInParent="true"

                android:textSize="30sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/view_focusia_selfie_coordinator_text"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="APURBA JYOTI LAHON : +91 7086643855\n
BHANUPRIYA TAMULI : +91 9127097352"
            android:textSize="15sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundrect"
        android:layout_marginTop="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/spons_draw"
            >
            <TextView
                android:id="@+id/view_focusia_selfie_photobooth"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="photobooth"
                android:layout_centerInParent="true"

                android:textSize="30sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focusia_selfie_photobooth"
            android:textSize="15sp"
            android:padding="8dp"

            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/roundrect"
        android:layout_marginTop="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/spons_draw">
            <TextView
                android:id="@+id/view_focusia_selfie_coordinators_photobooth"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="event coordinator"
                android:layout_centerInParent="true"

                android:textSize="30sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/view_focusia_selfie_coordinator_text_photobooth"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BHANUPRIYA TAMULI : +91 9127097352"
            android:textSize="15sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>
</LinearLayout>