<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/focusia_movie"
    android:visibility="gone">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundrect2"
        android:layout_margin="8dp"
        android:elevation="4dp">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/focusia_movie_desc"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundrect"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/spons_draw"
            >
            <TextView
                android:id="@+id/view_focusia_movie_theme"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="THEME"
                android:layout_centerInParent="true"

                android:textSize="30sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/view_focusia_movie_theme_text"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="campus life"
            android:textSize="20sp"
            android:padding="8dp"
           android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundrect"
        android:layout_marginTop="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/spons_draw"
            >
            <TextView
                android:id="@+id/view_focusia_movie_rules"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rules and regulations"
                android:layout_centerInParent="true"

                android:textSize="30sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focusia_movie_rules"
            android:textSize="15sp"
            android:padding="8dp"

            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/view_focusia_movie_reg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_vertical"
            android:text="REGISTRATION FEE\n( click to register )->"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textAlignment="center"/>
        <RelativeLayout
            android:id="@+id/view_focusia_movie_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >
            <com.jackandphantom.circularprogressbar.CircleProgressbar

                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:background="@drawable/circle"
                app:cpb_foregroundProgressColor="@color/colorAccent"
                app:cpb_foregroundProgressWidth="15"
                app:cpb_progress="100"
                app:cpb_roundedCorner="true"
                app:cpb_touchEnabled="false"
                />
            <TextView
                android:id="@+id/view_focusia_movie_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="rs 400\nper member"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundrect"
        android:layout_marginTop="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/spons_draw"
            >
            <TextView
                android:id="@+id/view_focusia_movie_note"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="note"
                android:layout_centerInParent="true"

                android:textSize="30sp"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focusia_movie_note"
            android:textSize="15sp"
            android:padding="8dp"

            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </LinearLayout>
</LinearLayout>